--- a/themes/hpe-pach-emdash/layouts/_default/series.html
+++ b/themes/hpe-pach-emdash/layouts/_default/series.html
@@ -21,7 +21,7 @@
         <section class="stack">
             {{ range .Pages.ByParam "seriesPart" }}
                 <div class="content"> 
-                        <a class="button black gradient-lr-cold rounded-1 p-2 mt-4 xxl bold" href="{{.Permalink}}" id="{{.Title | anchorize}}">{{.Params.seriesPart}} {{.Title}} </a>
+                        <a class="button black hpe-bg-gradient-reverse rounded-1 p-2 mt-4 xxl bold" href="{{.Permalink}}" id="{{.Title | anchorize}}">{{.Params.seriesPart}} {{.Title}} </a>
                     {{ partial "featureBetaNotice.html" . }}
                     <div class="content"> 
                     {{.Content}}
