--- a/themes/hpe-pach-emdash/layouts/partials/directory.html
+++ b/themes/hpe-pach-emdash/layouts/partials/directory.html
@@ -4,24 +4,24 @@
 
 {{ define "directory" }}
 
-  {{/*  <div class="content is-one-fifth">
+  <div class="content is-one-fifth">
   {{ range .dir }}
-    {{ if  (or (eq .BundleType "branch") (.Params.directory) )}}
+    {{ if and (not .Params.hidden) (or (eq .BundleType "branch") (.Params.directory) )}}
         <div class="ml-3 my-2"> 
 
-            <a class="{{if eq $.level "1" }} m metrichpe-medium {{else if eq $.level "2"}} s normal {{else}}xs thin{{end}}" href="{{ .RelPermalink }}" data-parent="{{.Parent.RelPermalink}}" data-section="{{.CurrentSection.RelPermalink}}"> {{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
-
-            {{ template "directory" (dict "dir" .Pages "current" $.current "parent" .Parent "section" $.section "level" "2") }}
+            <a class="ml-3 my-2 {{if eq $.level "1" }} l metrichpe-bold {{else }} l normal {{end}}" href="{{ .RelPermalink }}" data-parent="{{.Parent.RelPermalink}}" data-section="{{.CurrentSection.RelPermalink}}"> {{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
+              
+            <div class="{{if (eq $.section.Title .CurrentSection.Title) }}{{else}}closed-folder{{end}}"> 
+              {{ template "directory" (dict "dir" .Pages "current" $.current "parent" .Parent "section" $.section "level" "2") }}
+            </div>
         </div>
     {{ else }}
-      <div class="c-ml-2  ml-3 {{if (eq $.section.Title .CurrentSection.Title) }}{{else}}closed-folder{{end}}">
-        
-        <a class="xs thin" href="{{ .RelPermalink }}">{{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
-        
+      <div class="c-pl-4 py-2 {{if (eq $.section.Title .CurrentSection.Title) }}{{else}}closed-folder{{end}}">
+        <a class="s normal" href="{{ .RelPermalink }}">{{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
     </div>
     {{ end }}
   {{ end }}
-  </div>  */}}
+  </div>
 {{ end }}
 
 </section>
