--- a/themes/hpe-pach-emdash/layouts/partials/directory.html
+++ b/themes/hpe-pach-emdash/layouts/partials/directory.html
@@ -8,10 +8,9 @@
   {{ range .dir }}
     {{ if and (not .Params.hidden) (or (eq .BundleType "branch") (.Params.directory) )}}
         <div class="ml-3 my-2"> 
-
             <a class="ml-3 my-2 {{if eq $.level "1" }} l metrichpe-bold {{else }} l normal {{end}}" href="{{ .RelPermalink }}" data-parent="{{.Parent.RelPermalink}}" data-section="{{.CurrentSection.RelPermalink}}"> {{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
-              
-            <div class="{{if (eq $.section.Title .CurrentSection.Title) }}{{else}}closed-folder{{end}}"> 
+      
+            <div class="{{if (.IsDescendant .Parent) }}{{else}}closed-folder{{end}}"> 
               {{ template "directory" (dict "dir" .Pages "current" $.current "parent" .Parent "section" $.section "level" "2") }}
             </div>
         </div>
