--- a/themes/hpe-pach-emdash/assets/css/emdash.css
+++ b/themes/hpe-pach-emdash/assets/css/emdash.css
@@ -2291,3 +2291,9 @@ color: var(--is-text-color-inverted)
   background-color: var(--is-green);
   color: var(--is-white);
 }
+
+.sdk {
+  width: 100%;
+  height:100%;
+  border: none;
+}
