--- a/themes/hpe-pach-emdash/assets/css/emdash.css
+++ b/themes/hpe-pach-emdash/assets/css/emdash.css
@@ -2112,7 +2112,28 @@ box-shadow: inset 0 9000px 0px rgba(255, 255, 255, 0.1);
 input { border: none  !important; }
 
 .noscrollbar::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
+}
+
+.directory {
+  overflow-y: hidden; /* Hide scrollbar by default */
+}
+.directory:hover {
+  overflow-y: scroll; /* Show scrollbar on hover */
+}
+.directory::-webkit-scrollbar {
+  width:4px;
+  height: 8px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #c0c0c0;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
 }
 
 code::-webkit-scrollbar {
