--- a/themes/hpe-pach-emdash/assets/css/emdash.css
+++ b/themes/hpe-pach-emdash/assets/css/emdash.css
@@ -2112,12 +2112,13 @@ box-shadow: inset 0 9000px 0px rgba(255, 255, 255, 0.1);
 input { border: none  !important; }
 
 .noscrollbar::-webkit-scrollbar {
-  /* display: none; */
+  display: none;
 }
 
 .directory {
   overflow-y: hidden; /* Hide scrollbar by default */
 }
+
 .directory:hover {
   overflow-y: scroll; /* Show scrollbar on hover */
 }
