--- a/themes/hpe-pach-emdash/layouts/partials/directory.html
+++ b/themes/hpe-pach-emdash/layouts/partials/directory.html
@@ -16,7 +16,7 @@
         </div>
     {{ else }}
       <div class="c-pl-4 py-2 {{if (eq $.section.Title .CurrentSection.Title) }}{{else}}closed-folder{{end}}">
-        <a class="s normal" href="{{ .RelPermalink }}">{{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
+        <a class="m normal" href="{{ .RelPermalink }}">{{ if eq $.current .RelPermalink }}👉{{else}} {{end}} {{if .Title}}{{.Title}}{{else}}{{ path.BaseName . | humanize }}{{end}}</a>
     </div>
     {{ end }}
   {{ end }}
