--- a/themes/hpe-pach-emdash/layouts/_default/notebook.html
+++ b/themes/hpe-pach-emdash/layouts/_default/notebook.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 <div>
     <iframe
-  src="https://jupyterlite.github.io/demo/repl/index.html?toolbar=1?&kernel=python&code=import numpy as np"
+  src="https://jupyterlite.github.io/demo/repl/index.html?toolbar=1?&kernel=python&code=import python_pachyderm as pachyderm"
   width="100%"
   height="100%"
   class="sdk"
