--- a/themes/hpe-pach-emdash/layouts/partials/featureCommunityDetails.html
+++ b/themes/hpe-pach-emdash/layouts/partials/featureCommunityDetails.html
@@ -30,7 +30,7 @@
             <h3 class="mt-2">Updates</h3>
             <p><a href="/knowledge-base/announcements/11-20-2022/"> MLDM <strong>{{.Site.Params.releaseInfo.patch}}</strong> is out!</a> Download it <a href="https://github.com/pachyderm/pachyderm/releases/tag/v{{.Site.Params.releaseInfo.patch}}"><strong>here</strong></a>.</p>
             <h3 class="mt-2">New to MLDM?</h3>
-            <p><a class="button p-2 white rounded-1 wiggle" href="/latest">Get Started!</a>
+            <p><a class="button p-2 white rounded-1 wiggle" href="/latest">Read the Docs!</a>
             </p>
         </div>
 
@@ -72,7 +72,7 @@
         </div>
         <div class="darken-3 sp-2 is-fullsize-mobile"> 
             <h2 class="mt-2">New to Pachyderm?</h2>
-            <p><a class="button p-2 white rounded-1 wiggle" href="/latest">Get Started!</a>
+            <p><a class="button p-2 white rounded-1 wiggle" href="/latest">Read the Docs!</a>
             </p>
         </div>
     </section>  */}}
