--- a/themes/hpe-pach-emdash/layouts/partials/featureVersionDropdown.html
+++ b/themes/hpe-pach-emdash/layouts/partials/featureVersionDropdown.html
@@ -3,7 +3,7 @@
     {{ $removeVersion := print "/" .Section "/"}}
     {{ $versionlessLink := strings.TrimPrefix $removeVersion .RelPermalink }}
     <button class="merichpe-regular dropdown-alt is-fit outlined-green rounded-4 {{if eq .Section "tags" "series" "knowledge-base" "images"}}is-invisible{{end}}">
-        <div id="activeVersion" data-algolia="{{if or .IsHome (or (eq .Section "knowledge-base") (eq .Section "support") (eq .Section "latest") (eq .Section "tags") (eq .Section "series"))}}hpe-latest{{else}}{{.Section}}{{end}}" class="activeOption p-2 s metrichpe-regular">{{if .IsHome}}hpe-latest{{else}}{{.Section}}{{end}}</div>
+        <div id="activeVersion" data-algolia="{{if or .IsHome (or (eq .Section "knowledge-base") (eq .Section "support") (eq .Section "latest") (eq .Section "tags") (eq .Section "series"))}}hpe-latest{{else}}hpe-{{.Section}}{{end}}" class="activeOption p-2 s metrichpe-regular">{{if .IsHome}}hpe-latest{{else}}{{.Section}}{{end}}</div>
         <div class="metrichpe-regular s is-full dropdown-options white rounded-3 outlined-green"> 
              {{if eq .Section "tags" "series" "knowledge-base" "images"}}
              {{/*  do nothing  */}}
