--- a/themes/hpe-pach-emdash/layouts/_default/glossary.html
+++ b/themes/hpe-pach-emdash/layouts/_default/glossary.html
@@ -34,7 +34,8 @@
 
         {{ partial "glossary.html" . }}
 
-      
+        {{ partial "footer.html" . }}
+        {{ partial "featureKeyboard.html" . }}
     </main>
     <aside class="is-one-fifth is-hidden-mobile">
         <div class="stack-center sticky pt-6 xs px-3">
