--- a/themes/hpe-pach-emdash/layouts/_default/index.html
+++ b/themes/hpe-pach-emdash/layouts/_default/index.html
@@ -14,7 +14,7 @@
     {{ partial "featureCommunityDetails.html" . }}
 
     {{ partial "algoliaHits.html" . }}
-
+    {{ partial "footer.html" . }}
 {{end}}
 
 
