--- a/themes/hpe-pach-emdash/layouts/_default/series.html
+++ b/themes/hpe-pach-emdash/layouts/_default/series.html
@@ -28,6 +28,8 @@ value. */}} {{ define "main" }} {{ partial "glossary-directory.html" . }}
     </div>
     {{ end }} {{ end }}
   </section>
+  {{ partial "footer.html" . }}
+  {{ partial "featureKeyboard.html" . }}
 </main>
 <div
   class="pt-5 noscrollbar sticky is-one-fifth directory h-scroll px-3 is-hidden-mobile"
