--- a/themes/hpe-pach-emdash/layouts/partials/directory.html
+++ b/themes/hpe-pach-emdash/layouts/partials/directory.html
@@ -22,7 +22,10 @@
   {{ end }}
 
 {{ end }}
-
+{{/* optional bottom padding for end of sidebar items  */}}
+<div class="pb-7"></div>
+<div class="pb-7"></div>
+<div class="pb-7"></div>
 </section>
 
 
