--- a/themes/hpe-pach-emdash/layouts/partials/featureCommunityDetails.html
+++ b/themes/hpe-pach-emdash/layouts/partials/featureCommunityDetails.html
@@ -28,8 +28,8 @@
     <div class="spread hpe-bg-gradient is-fullsize-mobile mx-4 mt-3 rounded-4 c-rounded-4 c-my-2 text-center p-1 move-r" style="max-width: 500px">
        <div class="darken-3 sp-2">
             <h3 class="mt-2">Updates</h3>
-            <p><a href="/knowledge-base/announcements/11-20-2022/"> MLDM <strong>{{.Site.Params.releaseInfo.patch}}</strong> is out!</a> Download it <a href="https://github.com/pachyderm/pachyderm/releases/tag/v{{.Site.Params.releaseInfo.patch}}"><strong>here</strong></a>.</p>
-            <h3 class="mt-2">New to MLDM?</h3>
+            <p><a href="/knowledge-base/announcements/11-20-2022/"> Version <strong>{{.Site.Params.releaseInfo.patch}}</strong> is out!</a> Download it <a href="https://github.com/pachyderm/pachyderm/releases/tag/v{{.Site.Params.releaseInfo.patch}}"><strong>here</strong></a>.</p>
+            <h3 class="mt-2">New to HPE <br> Machine Learning Data Management Software?</h3>
             <p><a class="button p-2 white rounded-1 wiggle" href="/latest">Read the Docs!</a>
             </p>
         </div>
