--- a/themes/hpe-pach-emdash/layouts/partials/nav.html
+++ b/themes/hpe-pach-emdash/layouts/partials/nav.html
@@ -1,9 +1,10 @@
   <nav class="spread sticky white level-top py-1 px-4">
     
-    <div class="spread-left is-one-fifth is-hidden-mobile">
-      <a class="mt-2 hefty l spread-left c-mr-1" href="/">
+    <div class="spread-left is-one-third is-hidden-mobile">
+      <a class="mt-2 hefty l stack-left c-mr-1" href="/">
         <img src="/images/hpe.svg" style="max-width: 50px;" alt="logo"> 
-        <span class="pinned-center metrichpe-bold">HPE MLDM Docs</span>
+        <div class="spread"><span class=" metrichpe-bold is-fit mr-2 is-hidden-tablet">HPE</span><span class="is-hidden-tablet">Machine Learning Data Management Software</span></div>
+        
       </a>
     </div>
     <div class="spread-right is-one-third is-half-tablet is-fullsize-mobile c-rounded-1 c-ml-1 c-my-2">
