--- a/themes/hpe-pach-emdash/layouts/_default/index.html
+++ b/themes/hpe-pach-emdash/layouts/_default/index.html
@@ -7,7 +7,7 @@
 <section>
         <div class="spread-center c-pinned-center m-4 two-thirds-widescreen">
             <div>
-                <h1 class="text-center">HPE Machine Learning Data Management Software Docs</h1>
+                <h1 class="text-center">HPE ML Data Management Docs</h1>
                 <h2 class="metrichpe-regular mt-2 text-center"> Automate data transformations with data versioning and lineage.
             </div>
         </div>
