--- a/themes/hpe-pach-emdash/layouts/partials/nav.html
+++ b/themes/hpe-pach-emdash/layouts/partials/nav.html
@@ -3,7 +3,7 @@
     <div class="spread-left is-one-third is-hidden-mobile">
       <a class="mt-2 hefty l stack-left c-mr-1" href="/">
         <img src="/images/hpe.svg" style="max-width: 50px;" alt="logo"> 
-        <div class="spread"><span class=" metrichpe-bold is-fit mr-2 is-hidden-tablet">HPE</span><span class="is-hidden-tablet">Machine Learning Data Management Software</span></div>
+        <div class="spread"><span class=" metrichpe-bold is-fit mr-2 is-hidden-tablet">HPE</span><span class="is-hidden-tablet">ML Data Management</span></div>
         
       </a>
     </div>
