--- a/themes/hpe-pach-emdash/layouts/partials/featureCommunityDetails.html
+++ b/themes/hpe-pach-emdash/layouts/partials/featureCommunityDetails.html
@@ -29,7 +29,7 @@
        <div class="darken-3 sp-2">
             <h3 class="mt-2">Updates</h3>
             <p><a href="/knowledge-base/announcements/11-20-2022/"> Version <strong>{{.Site.Params.releaseInfo.patch}}</strong> is out!</a> Download it <a href="https://github.com/pachyderm/pachyderm/releases/tag/v{{.Site.Params.releaseInfo.patch}}"><strong>here</strong></a>.</p>
-            <h3 class="mt-2">New to HPE <br> Machine Learning Data Management Software?</h3>
+            <h3 class="mt-2">New to HPE ML Data Management?</h3>
             <p><a class="button p-2 white rounded-1 wiggle" href="/latest">Read the Docs!</a>
             </p>
         </div>
