--- a/themes/hpe-pach-emdash/layouts/partials/nav.html
+++ b/themes/hpe-pach-emdash/layouts/partials/nav.html
@@ -1,7 +1,7 @@
   <nav class="spread sticky white level-top py-1 px-4">
     
     <div class="spread-left is-one-third is-hidden-mobile">
-      <a class="mt-2 hefty l stack-left c-mr-1" href="/">
+      <a class=" hefty l spread-center c-pinned-center c-mr-1" href="/">
         <img src="/images/hpe.svg" style="max-width: 50px;" alt="logo"> 
         <div class="spread"><span class=" metrichpe-bold is-fit mr-2 is-hidden-tablet">HPE</span><span class="is-hidden-tablet">ML Data Management</span></div>
         
