--- a/themes/hpe-pach-emdash/layouts/partials/footer.html
+++ b/themes/hpe-pach-emdash/layouts/partials/footer.html
@@ -37,7 +37,7 @@
     {{end}}
 
     <div class="spread-center">
-      <a href="https://pachyderm.com" class="is-fit">
+      <a href="https://www.hpe.com/us/en/hpe-machine-learning-data-management-software.html" class="is-fit">
         <img src="/images/hpe.svg" alt="{{ .Site.Params.title }}" width="100px" height="100px" loading="lazy" />
       </a>
     </div>
