--- a/themes/hpe-pach-emdash/layouts/partials/nav.html
+++ b/themes/hpe-pach-emdash/layouts/partials/nav.html
@@ -21,7 +21,7 @@
       {{ partial "featureVersionDropdown.html" . }}
     {{end}}
   
-      <a href="https://www.pachyderm.com/see-pachyderm-in-action-demo/" class="green is-fit is-hidden-touch s semi-bold px-3 py-2 rounded-4"> Demo</a>
+      <a href="https://www.hpe.com/us/en/hpe-machine-learning-data-management-software.html?emodal=/us/en/greenlake/fragments/modal-fragment/hpe-machine-learning-data-management-software-modal-form.fragment.html" class="green is-fit is-hidden-touch s semi-bold px-3 py-2 rounded-4"> Demo</a>
       <button id="darkModeButton" class="is-fit black grayscale px-3 py-2 rounded-6" onclick="darkMode()">🌙</button>
     </div>
  
