landing page, directory, nav code changes for 2.7

--- a/themes/hpe-pach-emdash/assets/css/emdash.css
+++ b/themes/hpe-pach-emdash/assets/css/emdash.css
@@ -1792,7 +1792,7 @@ padding-top: var(--spacing-1);
 }
 .gray, .c-gray > * {
   background-color: var(--is-gray) ;
-  color: var(--is-text-color-inverted) ;
+  color: var(--is-text-color) ;
 }
 .dark-gray, .c-dark-gray > * {
   background-color: var(--is-dark-gray) ;
