--- a/themes/hpe-pach-emdash/assets/css/emdash.css
+++ b/themes/hpe-pach-emdash/assets/css/emdash.css
@@ -2013,13 +2013,14 @@ box-shadow: inset 0 9000px 0px rgba(255, 255, 255, 0.1);
   font-weight: bold;
 }
 
-
-
-
 .h-scroll {
   max-height: 100vh;
   overflow-y: scroll;
 }
+
+.h-full {
+  height: 100vh;
+  }
 
 .absolute {
   position: absolute;
