--- a/themes/hpe-pach-emdash/layouts/_default/section.html
+++ b/themes/hpe-pach-emdash/layouts/_default/section.html
@@ -40,9 +40,16 @@
     
     </main>
     <aside class="is-one-fifth is-hidden-mobile">
-        <div class="sticky pt-6 m px-3">
-            {{.TableOfContents}}
+        {{- if .Site.Params.chatGPT.section -}}
+        <div class="sticky">
+            {{partial "clippy-full.html" . }}
         </div>
+        {{else}}
+        <div class="sticky pt-6 xs px-3">
+            {{.TableOfContents}}
+
+        </div>
+        {{- end -}}
     </aside>
 {{end}}
 
