--- a/themes/hpe-pach-emdash/layouts/_default/single.html
+++ b/themes/hpe-pach-emdash/layouts/_default/single.html
@@ -39,9 +39,16 @@
         {{ partial "featureKeyboard.html" . }}
     </main>
     <aside class="is-one-fifth is-hidden-mobile">
-        <div class="sticky pt-6 m px-3">
-            {{.TableOfContents}}
+        {{- if .Site.Params.chatGPT.single -}}
+        <div class="sticky">
+            {{partial "clippy-full.html" . }}
         </div>
+        {{else}}
+        <div class="sticky pt-6 xs px-3">
+            {{.TableOfContents}}
+
+        </div>
+        {{- end -}}
     </aside>
 {{end}}
 
