--- a/themes/hpe-pach-emdash/layouts/_default/list.html
+++ b/themes/hpe-pach-emdash/layouts/_default/list.html
@@ -5,8 +5,8 @@
 
 {{ define "main" }}
 {{partial "glossary-directory.html" . }} 
-    <main class="content px-3"> 
-        <div class="spread-between my-2">
+    <main class="stack content px-3"> 
+        <div class="spread-between my-2 is-fit-y">
             {{ partial "featureBreadcrumbs.html" . }} 
             {{ partial "featureEditLink.html" . }}
          </div> 
