--- a/themes/hpe-pach-emdash/layouts/_default/section.html
+++ b/themes/hpe-pach-emdash/layouts/_default/section.html
@@ -4,8 +4,8 @@
 
 {{ define "main" }}
 {{partial "directory.html" . }}
-    <main class="content px-3"> 
-        <div class="spread-between my-2">
+    <main class="stack content px-3"> 
+        <div class="spread-between my-2 is-fit-y">
             {{ partial "featureBreadcrumbs.html" . }} 
             {{ partial "featureEditLink.html" . }}
          </div> 
