--- a/themes/hpe-pach-emdash/layouts/_default/index.html
+++ b/themes/hpe-pach-emdash/layouts/_default/index.html
@@ -3,8 +3,6 @@
     - layout-list is an empty class for easier location; do not style against it.
 */}}
 
-
-{{/*  
 {{ define "main" }}
 {{partial "directory.html" . }}
 <main class="c-my-2">
@@ -15,7 +13,7 @@
             </div>
         </a>
         <div id="announcements" class="is-two-thirds spread black gradient-rl-cold rounded-2 c-sp-2">
-            <div class="spread c-pinned-center darken-2 rounded-2">
+            <div class="spread c-pinned-center darken-2 rounded-2 content">
                 <h3 class="text-center">Announcements</h3>
                 <ul class="is-two-thirds">
                 <li>
@@ -27,8 +25,11 @@
                     >.
                 </li>
                 <li>
-                    The Alpha release of our new Python
+                    The release of our new Python
                     <strong>Pachyderm SDK</strong> is now available.
+                </li>
+                <li>
+                    View our new <a href="/changelog">Changelog</a>!
                 </li>
                 </ul>
         
@@ -185,10 +186,7 @@
                     >from pachyderm_sdk import Client</code
                 >
                 <code class="lang-python is-fit"
-                    >from pachyderm_sdk.api import pfs
-                </code>
-                <code class="lang-python is-fit"
-                    >from pachyderm_sdk.api import pps
+                    >from pachyderm_sdk.api import pfs, pps
                 </code>
                 </div>
             </div>
@@ -199,10 +197,10 @@
                 <h3 class="mt-2">3. Test Your Connection</h3>
                 <div class="brighten-2 sp-2 spread is-fit stack">
                 <code class="lang-python is-fit"
-                    >client = Client(host="localhost", port="80")</code
+                    >c = Client(host="localhost", port="80")</code
                 >
                 <code class="lang-python is-fit"
-                    >version = client.get_version()</code
+                    >version = c.get_version()</code
                 >
                 <code class="lang-python is-fit">print(version)</code>
                 </div>
@@ -317,20 +315,4 @@
 </main>
 
 
-{{end}}  */}}
-
-{{ define "main" }}
-<section>
-        <div class="spread-center c-pinned-center m-4 two-thirds-widescreen">
-            <div>
-                <h1 class="text-center">HPE ML Data Management Docs</h1>
-                <h2 class="metrichpe-regular mt-2 text-center"> Automate data transformations with data versioning and lineage.
-            </div>
-        </div>
-    {{ partial "featureCommunityDetails.html" . }}
-
-    {{ partial "algoliaHits.html" . }}
-    {{ partial "footer.html" . }}
-{{end}}
-
-
+{{end}}  
