--- a/themes/hpe-pach-emdash/layouts/_default/index.html
+++ b/themes/hpe-pach-emdash/layouts/_default/index.html
@@ -25,11 +25,10 @@
                     >.
                 </li>
                 <li>
-                    The release of our new Python
-                    <strong>Pachyderm SDK</strong> is now available.
+                    The next minor release, <strong>2.10</strong>, will require Postgres 15 or later.
                 </li>
                 <li>
-                    View our new <a href="/changelog">Changelog</a>!
+                    View our <a href="/changelog">Changelog</a>!
                 </li>
                 </ul>
         
